unpackaged/main/default/objects/Proveedor__c/Proveedor__c.object-meta.xml
<CustomObject>
    <label>Proveedor</label>
    <nameField>
        <label>Proveedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proveedores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>