unpackaged/main/default/objects/Proveedor__c/fields/Aprobador__c.field-meta.xml
<CustomField>
    <fullName>Aprobador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proveedores</relationshipName>
    <type>Lookup</type>
</CustomField>