unpackaged/main/default/objects/Proveedor__c/fields/Codigo_de_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Proveedor__c</fullName>
    <displayFormat>PRV-{00000}</displayFormat>
    <label>Código de Proveedor</label>
    <type>AutoNumber</type>
</CustomField>