unpackaged/main/default/objects/Proveedor__c/fields/CompaniasKontrol__c.field-meta.xml
<CustomField>
    <fullName>CompaniasKontrol__c</fullName>
    <label>Aplica compañía En Kontrol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>