unpackaged/main/default/objects/Proveedor__c/fields/ContactoVendedor__c.field-meta.xml
<CustomField>
    <fullName>ContactoVendedor__c</fullName>
    <label>Contacto del vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>