unpackaged/main/default/objects/Proveedor__c/fields/Correo_2__c.field-meta.xml
<CustomField>
    <fullName>Correo_2__c</fullName>
    <label>Correo 2</label>
    <type>Email</type>
</CustomField>