unpackaged/main/default/objects/Proveedor__c/fields/Correo_3__c.field-meta.xml
<CustomField>
    <fullName>Correo_3__c</fullName>
    <label>Correo 3</label>
    <type>Email</type>
</CustomField>