unpackaged/main/default/objects/Proveedor__c/fields/Correo_4__c.field-meta.xml
<CustomField>
    <fullName>Correo_4__c</fullName>
    <label>Correo 4</label>
    <type>Email</type>
</CustomField>