unpackaged/main/default/objects/Proveedor__c/fields/Correo__c.field-meta.xml
<CustomField>
    <fullName>Correo__c</fullName>
    <label>Correo</label>
    <type>Email</type>
</CustomField>