unpackaged/main/default/objects/Proveedor__c/fields/Correo_Alternativo__c.field-meta.xml
<CustomField>
    <fullName>Correo_Alternativo__c</fullName>
    <label>Correo Alternativo</label>
    <type>Email</type>
</CustomField>