unpackaged/main/default/objects/Proveedor__c/fields/Creado__c.field-meta.xml
<CustomField>
    <fullName>Creado__c</fullName>
    <label>Creado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>