unpackaged/main/default/objects/Proveedor__c/fields/Es_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Es_Nuevo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Es Nuevo</label>
    <type>Checkbox</type>
</CustomField>