unpackaged/main/default/objects/Proveedor__c/fields/EstatusSolicitud__c.field-meta.xml
<CustomField>
    <fullName>EstatusSolicitud__c</fullName>
    <label>Estado de la solicitud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>