unpackaged/main/default/objects/Proveedor__c/fields/LineaProductos__c.field-meta.xml
<CustomField>
    <fullName>LineaProductos__c</fullName>
    <label>Linea de producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>