unpackaged/main/default/objects/Proveedor__c/fields/Nombre_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Comercial__c</fullName>
    <label>Nombre Comercial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>