unpackaged/main/default/objects/Proveedor__c/fields/NomRepLegal__c.field-meta.xml
<CustomField>
    <fullName>NomRepLegal__c</fullName>
    <label>Nombre de representante legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>