unpackaged/main/default/objects/Proveedor__c/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>