unpackaged/main/default/objects/Proveedor__c/fields/Plaza__c.field-meta.xml
<CustomField>
    <fullName>Plaza__c</fullName>
    <label>Plaza</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aguascalientes</fullName>
                <label>AGUASCALIENTES</label>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
                <isActive>false</isActive>
                <label>Distrito Federal</label>
            </value>
            <value>
                <fullName>Estado de Mexico</fullName>
                <label>ESTADO DE MEXICO</label>
            </value>
            <value>
                <fullName>Guanajuato</fullName>
                <isActive>false</isActive>
                <label>Guanajuato</label>
            </value>
            <value>
                <fullName>Jalisco</fullName>
                <label>JALISCO</label>
            </value>
            <value>
                <fullName>Nuevo Leon</fullName>
                <label>NUEVO LEON</label>
            </value>
            <value>
                <fullName>Queretaro</fullName>
                <label>QUERETARO</label>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
                <label>QUINTANA ROO</label>
            </value>
            <value>
                <fullName>San Luis Potosi</fullName>
                <isActive>false</isActive>
                <label>San Luis Potosi</label>
            </value>
            <value>
                <fullName>Tamaulipas</fullName>
                <label>TAMAULIPAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>