unpackaged/main/default/objects/Proveedor__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Proveedores</relationshipLabel>
    <relationshipName>Proveedores</relationshipName>
    <type>Lookup</type>
</CustomField>