unpackaged/main/default/objects/Proveedor__c/fields/RazonSocialNombre__c.field-meta.xml
<CustomField>
    <fullName>RazonSocialNombre__c</fullName>
    <label>Nombre de la razón social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>