unpackaged/main/default/objects/Proveedor__c/fields/Rfc__c.field-meta.xml
<CustomField>
    <fullName>Rfc__c</fullName>
    <label>RFC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>