unpackaged/main/default/objects/Proveedor__c/fields/TipoProveedor__c.field-meta.xml
<CustomField>
    <fullName>TipoProveedor__c</fullName>
    <label>Tipo de proveedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>