unpackaged/main/default/objects/Proveedor__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>