unpackaged/main/default/objects/Proveedor__c/validationRules/No_modificar_nombre_comercial.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_nombre_comercial</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &#39;Catálogo Proveedores&#39;,
				ISCHANGED(Nombre_Comercial__c)
			)</errorConditionFormula>
    <errorDisplayField>Nombre_Comercial__c</errorDisplayField>
    <errorMessage>No se puede en nombre comercial una vez creado el registro del proveedor.</errorMessage>
</ValidationRule>