unpackaged/main/default/objects/Proveedor__c/validationRules/No_Modificar_Nombre_Proveedor.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Modificar_Nombre_Proveedor</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &#39;Catálogo Proveedores&#39;,
				ISCHANGED(Name)
			)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>No se puede modificar el valor del campo Proveedor</errorMessage>
</ValidationRule>