unpackaged/main/default/objects/Proveedor__c/validationRules/No_modificar_rfc.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_rfc</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &#39;Catálogo Proveedores&#39;,
				ISCHANGED(Rfc__c)
			)</errorConditionFormula>
    <errorDisplayField>Rfc__c</errorDisplayField>
    <errorMessage>No se puede modificar en RFC una vez que el registro ha sido creado.</errorMessage>
</ValidationRule>