unpackaged/main/default/objects/Proveedor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_Comercial__c</columns>
    <columns>Rfc__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contacto__c</columns>
    <columns>Correo__c</columns>
    <columns>Correo_2__c</columns>
    <columns>Correo_3__c</columns>
    <columns>Plaza__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>